force-app/main/default/objects/custom_create95__c/custom_create95__c.object-meta.xml
<CustomObject>
    <label>Custom created object95</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects95</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>