force-app/main/default/objects/custom_create95__c/fields/custom_create_95field558__c.field-meta.xml
<CustomField>
    <fullName>custom_create_95field558__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 95field558</label>
    <type>Checkbox</type>
</CustomField>